# 2020-core-code

./: .gitattributes  .gitignore  configure  defaults.mk  readme.md
.github/workflows/: ccpp.yml  ci-full.yml  ci-onpush.yml  make-test.yml
collections/: Makefile  arraylist.c  arraylist.h  hashtable.c  hashtable.h  linkedlist.c  linkedlist.h  list.c  list.h  queue.c  queue.h  stack.c  stack.h
doc/: .gitignore  Makefile  Template.tex
doc/ControlProtocol/: ControlProtocol.tex
game/: game.h
i2c/: Makefile  i2cUtils.c  i2cUtils.h  i2c_constants.h  i2cutils.c  i2cutils.h
network/: Makefile  constants.h  listener.h  llnet.valgrind.supp  lowlevel.c  lowlevel.h  messagehandler.c  messagehandler.h  netutils.c  netutils.h  packet.h  packethandlers.c  packethandlers.h  robotdata.c  robotdata.h  sockdefs.h
src/: CMakeLists.txt  defaults.mk  template.mk
src/collections/: CMakeLists.txt  arraylist.c  arraylist.h  hashtable.h  list.c  stack.h
src/i2c/: CMakeLists.txt
src/network/: CMakeLists.txt  constants.h  lowlevel.h  messagehandler.c  messagehandler.h  netutils.c
src/serial/: usbser_constants.h
src/test/: CMakeLists.txt  test-packethandlers.c  test-utils.h
src/utils/: .gitignore  Makefile  dbgprint.h
test/: test-hashtable.c  test-list.c  test-llnet.c  test-packethandlers.c  test-utils.h
utils/: Makefile  bounds.h  dbgcommit.h  dbgprint.h
